--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ url: "http://kylemonahan.github.io"
 baseurl: ""
 
 # If you are building a GitHub project page then use these settings:
-#url: "http://username.github.io/projectname"
+#url: "https://kylemonahan.github.io/kylemonahan/"
 #baseurl: "/projectname"
 
 # Of course don't forget to change the username and projectname to YOUR username and project
