finally updating the site with name and title

--- a/_config.yml
+++ b/_config.yml
@@ -14,21 +14,18 @@ baseurl: ""
 # Of course don't forget to change the username and projectname to YOUR username and project
 
 # Name of website
-title: kyle.m.monahan
+title: kyle.m.monahan | github
 
 # Short description of your site
-description: 
+description: This site is to serve as an organizational frame and portfolio for my ongoing software development and coding projects. 
+Please feel free to reach out below if you have any questions. 
 
 # --- Navigation bar options --- #
 
 # List of links in the navigation bar
 navbar-links:
   About Me: "aboutme"
-  Resources:
-    - Beautiful Jekyll: "http://deanattali.com/beautiful-jekyll/"
-    - Learn markdown: "http://www.markdowntutorial.com/"
-    - GitHub Pages: "https://pages.github.com/"
-  Author's home: "http://deanattali.com"
+  Author's home: "http://kylemonahan.info"
 
 # Image to show in the navigation bar - image must be a square (width = height)
 # Remove this parameter if you don't want an image in the navbar
