updating title again

--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ baseurl: ""
 # Of course don't forget to change the username and projectname to YOUR username and project
 
 # Name of website
-title: kyle.m.monahan | github
+title: kyle m monahan
 
 # Short description of your site
 description: This site is to serve as an organizational frame and portfolio for my ongoing software development and coding projects. 
